--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,14 @@
-/* 
+h1 {
+  font-size: 60px;
+}
+span {
+  font-size: 18px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.principal {
+  max-width: 95%;
+}
 
-*/
+.pie {
+  height: 250px;
+}
